--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "element-ui": "^2.13.0",
     "lodash": "^4.17.15",
     "mapbox-gl": "^1.8.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
