--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "covid_19"
   ],
   "dependencies": {
+    "@mapbox/mapbox-gl-language": "^0.10.1",
     "axios": "^0.19.2",
     "copy-webpack-plugin": "^5.1.1",
     "core-js": "^3.4.4",
